<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".sign_up"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-11dp"
    tools:showIn="@layout/activity_sign_up">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_e_mail"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_user_name"
        android:layout_width="183dp"
        android:layout_height="46dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_user_email"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_user_password"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_legal_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="265dp"
        android:text="密码长度必须大于八位\n并且包含数字和字母"
        app:layout_constraintStart_toEndOf="@+id/password_legal_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_user_password_dup"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/password_dup_legal_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="352dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caution" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="313dp"
        android:text="@string/user_password_dup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_user_nickname"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="384dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_telephone"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="428dp"

        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="4dp"
        android:text="@string/user_telephone"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_telephone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="396dp"
        android:text="@string/user_nick_name"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_user_nickname"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="236dp"
        android:text="@string/user_password"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_user_password"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/username_legal_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="114dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caution" />

    <ProgressBar
        android:id="@+id/username_query_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="114dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="641dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_legal_tip"
        android:layout_width="93dp"
        android:layout_height="19dp"
        android:layout_marginStart="150dp"

        android:layout_marginTop="124dp"
        android:text="用户名已存在"
        app:layout_constraintStart_toEndOf="@+id/username_legal_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/email_query_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/email_legal_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caution" />

    <TextView
        android:id="@+id/email_legal_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="198dp"
        android:text="已被注册"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/password_legal_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="271dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caution" />

    <TextView
        android:id="@+id/password_dup_legal_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="360dp"
        android:text="两次输入的密码不一致"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>